inclusao de tratamentos